[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sqlbuster"
version = "0.1.0"
description = "A tool for exploring and testing database SQL capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SQLBuster Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
# TODO: Replace with your actual GitHub repository URL
Homepage = "https://github.com/yourusername/sqlbuster"
Repository = "https://github.com/yourusername/sqlbuster.git"
Issues = "https://github.com/yourusername/sqlbuster/issues"

[tool.setuptools]
packages = ["sqlbuster", "sqlbuster.core", "sqlbuster.clauses", 
            "sqlbuster.reporter", "sqlbuster.utils", "sqlbuster.examples",
            "sqlbuster.tests"]

[tool.setuptools.package-dir]
"sqlbuster" = "sqlbuster"

[tool.pytest.ini_options]
testpaths = ["sqlbuster/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
src_paths = ["sqlbuster", "sqlbuster/tests"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
